# PaddleClas

./: .gitignore  .pre-commit-config.yaml  20230921_offline_distillation_rfc.md  MANIFEST.in  README.md  README_ch.md  README_cn.md  README_en.md  __init__.py  aa.txt  buff.py  eval.py  forward_check.py  hubconf.py  paddle-weeds.py  paddleclas.py  pyproject.toml  readthedoc指南.md  regnet.py  requirements.txt  setup.py  test.sh  test_ci  test_ct.txt  train.sh
.github/ISSUE_TEMPLATE/: ----.md  ---clas-issue-.md
.github/workflows/: python-publish.yml
.mirrors-yapf/pre_commit_dummy_package.egg-info/: requires.txt
AIContainer/: project.config.json
AIContainer/miniprogram/: app.js  app.json  app.wxss  package-lock.json  package.json
Smart_container/: container.sql  manage.py  server.py
Smart_container/app01/: .views.py.swo  .views.py.swp  apps.py  models.py  views.py
Smart_container/djangoProject/: asgi.py  settings.py  urls.py  wsgi.py
benchmark/: README.md  prepare_data.sh  run_all.sh  run_benchmark.sh
client/: client.py
configs/: debug.yaml  eval.yaml  flower.yaml  pretrained.list
configs/AlexNet/: AlexNet.yaml
configs/CSPNet/: CSPResNet50.yaml
configs/DLA/: DLA102.yaml  DLA102x.yaml  DLA102x2.yaml  DLA169.yaml  DLA34.yaml  DLA46_c.yaml  DLA46x_c.yaml  DLA60.yaml  DLA60x.yaml  DLA60x_c.yaml
configs/DPN/: DPN107.yaml  DPN131.yaml  DPN68.yaml  DPN92.yaml  DPN98.yaml
configs/DarkNet/: DarkNet53.yaml
configs/DataAugment/: ResNet50_AutoAugment.yaml  ResNet50_Baseline.yaml  ResNet50_Cutmix.yaml  ResNet50_Cutout.yaml  ResNet50_GridMask.yaml  ResNet50_HideAndSeek.yaml  ResNet50_Mixup.yaml  ResNet50_RandAugment.yaml  ResNet50_RandomErasing.yaml
configs/DeiT/: DeiT_base_distilled_patch16_224.yaml  DeiT_base_distilled_patch16_384.yaml  DeiT_base_patch16_224.yaml  DeiT_base_patch16_384.yaml  DeiT_small_distilled_patch16_224.yaml  DeiT_small_patch16_224.yaml  DeiT_tiny_distilled_patch16_224.yaml  DeiT_tiny_patch16_224.yaml
configs/DenseNet/: DenseNet121.yaml  DenseNet161.yaml  DenseNet169.yaml  DenseNet201.yaml  DenseNet264.yaml
configs/Distillation/: R50_vd_distill_MV3_large_x1_0.yaml  ResX101_32x16d_wsl_distill_R50_vd.yaml
configs/EfficientNet/: EfficientLite0.yaml  EfficientNetB0.yaml
configs/GhostNet/: GhostNet_0_5.yaml  GhostNet_1_0.yaml  GhostNet_1_3.yaml  GhostNet_x0_5.yaml  GhostNet_x1_0.yaml  GhostNet_x1_3.yaml
configs/HRNet/: HRNet_W18_C.yaml  HRNet_W30_C.yaml  HRNet_W32_C.yaml  HRNet_W40_C.yaml  HRNet_W44_C.yaml  HRNet_W48_C.yaml  HRNet_W64_C.yaml
configs/HarDNet/: HarDNet39_ds.yaml  HarDNet68.yaml  HarDNet68_ds.yaml  HarDNet85.yaml
configs/Inception/: GoogLeNet.yaml  InceptionV3.yaml  InceptionV3_fp16.yaml  InceptionV4.yaml
configs/MixNet/: MixNet_L.yaml  MixNet_S.yaml
configs/MobileNetV1/: MobileNetV1.yaml  MobileNetV1_x0_25.yaml  MobileNetV1_x0_5.yaml  MobileNetV1_x0_75.yaml
configs/MobileNetV2/: MobileNetV2.yaml  MobileNetV2_x0_25.yaml  MobileNetV2_x0_5.yaml  MobileNetV2_x0_75.yaml  MobileNetV2_x1_5.yaml  MobileNetV2_x2_0.yaml
csrc/: README.md  setup_cuda.py
dataset/: ILSVRC2012  README.md  chain_dataset  generate_flower_list.py
deploy/: test.sh
deploy/cpp/: CMakeLists.txt  readme.md  readme_en.md
deploy/cpp/external-cmake/: auto-log.cmake
deploy/cpp/include/: cls.h  cls_config.h  preprocess_op.h  utility.h
deploy/cpp/lib/: CMakeLists.txt
deploy/cpp/lib/include/: cls.h  cls_config.h
deploy/cpp/lib/src/: cls.cpp  cls_config.cpp  preprocess_op.cpp  utility.cpp
deploy/cpp/src/: cls.cpp  cls_config.cpp  main.cpp  preprocess_op.cpp  utility.cpp
deploy/cpp/test/: main.cpp
deploy/cpp/tools/: build.sh  build_demo.sh  build_lib.sh  config.txt
deploy/fastdeploy/rockchip/rknpu2/cpp/: CMakeLists.txt  README.md  infer.cc
deploy/lite/: Makefile  (+6 more)
deploy/shitu_android_demo/app/src/main/cpp/: CMakeLists.txt  FeatureExtractor.h  Native.cc  Native.h  ObjectDetector.cc  ObjectDetector.h  Pipeline.cc  Pipeline.h  README.md  Utils.cc  Utils.h  VectorSearch.cc  VectorSearch.h
deploy/shitu_android_demo/app/src/main/cpp/include/faiss/: AuxIndexStructures.h  FaissAssert.h  HNSW.h  IVFlib.h  IndexBinary.h  IndexBinaryFromFloat.h  IndexBinaryIVF.h  IndexFlat.h  IndexHNSW.h  IndexIVFSpectralHash.h  IndexLSH.h  IndexPQ.h  IndexReplicas.h  IndexScalarQuantizer.h  IndexShards.h  InvertedLists.h  OnDiskInvertedLists.h  PolysemousTraining.h  ThreadedIndex-inl.h  ThreadedIndex.h  WorkerThread.h  index_io.h
docs/: conf.py  index.rst  requirements.txt
mirrors-yapf/: .pre-commit-hooks.yaml  README.md  setup.py
paddleclas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ppcls/: __init__.py  version.py
test/: benchmark.yaml  parames.txt  prepare.sh  test.sh
test_tipc/: README.md  benchmark_train.sh  common_func.sh  eval_all_models.sh  extract_loss.py  generate_cpp_yaml.py  loss_filter.py  prepare.sh  prepare_lite_arm_cpu_cpp.sh  prepare_npu_test.sh  prepare_xpu_test.sh  test_dy2static_correctness.sh  test_inference_cpp.sh  test_inference_jeston.sh  test_lite_arm_cpu_cpp.sh  test_paddle2onnx.sh  test_ptq_inference_python.sh  test_serving_infer.sh  test_serving_infer_cpp.sh  test_serving_infer_python.sh  test_train_dy2static_python.sh  test_train_inference_python.sh  test_train_inference_python_npu.sh  test_train_inference_python_xpu.sh
tests/: DarkNet53.txt  HRNet_W18_C.txt  LeViT_128S.txt  MobileNetV1.txt  MobileNetV2.txt  MobileNetV3_large_x1_0.txt  README.md  ResNeXt101_vd_64x4d.txt  ResNet50_vd.txt  ShuffleNetV2_x1_0.txt  SwinTransformer_tiny_patch4_window7_224.txt  cpp_config.txt  prepare.sh  test.sh
tools/: __init__.py  dali.py  download.py  ema.py  ema_clean.py  eval.py  eval.sh  eval_multi_platform.py  export_model.py  export_model_multimodal.py  export_model_retrieval.py  export_serving_model.py  infer.py  infer_multimodal.py  program.py  run.sh  run_ResNet_50_fp16.sh  run_dali.sh  run_debug.sh  run_download.sh  run_logo.sh  run_multi_nodes.sh  run_single_card.sh  search_strategy.py  test_hubserving.py  train.py  train.sh  train_logo.py  train_multi_platform.py  train_multimodal.py
uapi/: __init__.py
(+4763 files in other folders)
